--- a/WebMart/CSS/estilos.css
+++ b/WebMart/CSS/estilos.css
@@ -368,6 +368,11 @@ footer table td:first-child{
     border-radius: 15px;
 }
 
+.sIndex2 form div button:hover{
+    cursor: pointer;
+    background: #2e3093;
+}
+
 .sIndex3{
     display: flex;
     overflow-x: auto;
@@ -534,6 +539,11 @@ body::-webkit-scrollbar-thumb:hover,.sIndex3::-webkit-scrollbar-thumb:hover, .sI
     cursor: pointer;
 }
 
+.sProd1 .typeExist{
+    background: rgba(0, 173, 236);
+    color: white;
+}
+
 .sProd1 form .grid1{
     border-radius: 25px;
     grid-column: span 5;
@@ -576,6 +586,99 @@ body::-webkit-scrollbar-thumb:hover,.sIndex3::-webkit-scrollbar-thumb:hover, .sI
     padding: 0 5px
 }
 
+.sProd1 .grid2 p{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.sProd1 .typePrice{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.25);
+}
+
+.sProd1 .typePrice>div{
+    margin: auto;
+    background: white;
+    display: block;
+}
+
+.sProd1 .typePrice .sPrice1{
+    padding: 10px 10px;
+    display: flex;
+    text-align: center;
+}
+
+.sProd1 .sPrice1 h3{
+    width: 100%;
+}
+
+.sProd1 .sPrice1 span{
+    padding-top: 3px;
+    cursor: pointer;
+}
+
+.sProd1 .sPrice2{
+    padding: 20px 30px;
+}
+
+
+.sProd1 .sPrice2>div{
+    border: 1px solid lightgrey;
+    border-radius: 10px;
+    display: flex;
+    width: 100%;
+    background: rgba(211, 211, 211, 0.5);
+    margin: 15px 0;
+}
+
+.sProd1 .sPrice2 input{
+    font-size: 18px;
+    background: none;
+    outline: none;
+    border: none;
+    width: 100%;
+    padding: 10px;
+}
+
+.sProd1 .sPrice2 span{
+    padding:10px 5px 0 0;
+}
+
+.sProd1 .sPrice2>section{
+    display: flex;
+    cursor: default;
+}
+
+.sProd1 .sPrice2>section>div{
+    padding: 3px 5px;
+
+}
+.sProd1 .sPrice2>section>div{
+    text-decoration: underline;
+}
+
+
+.sProd1 .sPrice2>section>button{
+    border-radius: 15px;
+    margin-left: auto;
+    background: #00adec;
+    color: white;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.sProd1 .sPrice2 input[type=number]::-webkit-inner-spin-button,
+.sProd1 .sPrice2 input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
 .sProd1 .grid3>section{
     display: flex;
     width: 100%;
@@ -589,17 +692,45 @@ body::-webkit-scrollbar-thumb:hover,.sIndex3::-webkit-scrollbar-thumb:hover, .sI
 }
 
 .sProd1 form div button{
+    height: 30px;
     width: 100%;
     background: #00adec;
     color: white;
     font-size: 16px;
     outline: none;
     border: none;
-    border-radius: 15px;
+    border-radius: 20px;
+}
+
+.sProd1 form div button:hover{
+    cursor: pointer;
+    background: #2e3093;
 }
 
 
+/* PÁGINA BLOCK */
+.mBlock{
+    display: grid;
+}
 
+.mBlock>section{
+    text-align: center;
+    justify-content: center;
+    margin: auto;
+    padding:10px 0;
+    background: lightgrey;
+    width: 100%;
+}
+
+.mBlock>section p{
+    padding: 5px 0;
+}
+
+.mBlock>section a{
+    text-decoration: underline;
+    color: black;
+
+}
 /* MEDIA QUERY */
 
 @media (max-width: 440px) {
@@ -649,7 +780,6 @@ body::-webkit-scrollbar-thumb:hover,.sIndex3::-webkit-scrollbar-thumb:hover, .sI
         grid-column: span 1 !important;
         overflow: hidden;
     }
-
 
 }
 
