--- a/WebMart/CSS/estilos.css
+++ b/WebMart/CSS/estilos.css
@@ -383,10 +383,9 @@ footer table td:first-child{
     display: flex;
 }
 
-body::-webkit-scrollbar,.sIndex3::-webkit-scrollbar, .sIndex2 .popUp  .sec2popUp::-webkit-scrollbar {height: 8px; width: 10px}
-body::-webkit-scrollbar-thumb,.sIndex3::-webkit-scrollbar-thumb, .sIndex2 .popUp  .sec2popUp::-webkit-scrollbar-thumb {background-color: lightgrey; border-radius: 5px;}
-body::-webkit-scrollbar-thumb:hover,.sIndex3::-webkit-scrollbar-thumb:hover, .sIndex2 .popUp  .sec2popUp::-webkit-scrollbar-thumb:hover {background-color: rgb(180, 180, 180);}
-
+.sProd1 .sec2::-webkit-scrollbar, body::-webkit-scrollbar,.sIndex3::-webkit-scrollbar, .sIndex2 .popUp  .sec2popUp::-webkit-scrollbar {height: 8px; width: 10px}
+.sProd1 .sec2::-webkit-scrollbar-thumb, body::-webkit-scrollbar-thumb,.sIndex3::-webkit-scrollbar-thumb, .sIndex2 .popUp  .sec2popUp::-webkit-scrollbar-thumb {background-color: lightgrey; border-radius: 5px;}
+.sProd1 .sec2::-webkit-scrollbar-thumb:hover, body::-webkit-scrollbar-thumb:hover,.sIndex3::-webkit-scrollbar-thumb:hover, .sIndex2 .popUp  .sec2popUp::-webkit-scrollbar-thumb:hover {background-color: rgb(180, 180, 180);}
 
 .sIndex3 a{
     margin:0 5px 0;
@@ -525,7 +524,6 @@ body::-webkit-scrollbar-thumb:hover,.sIndex3::-webkit-scrollbar-thumb:hover, .sI
 
 .sProd1{
     padding-bottom: 15px;
-    border-bottom: 1px solid lightgrey;
 }
 
 .sProd1 form{
@@ -605,6 +603,7 @@ body::-webkit-scrollbar-thumb:hover,.sIndex3::-webkit-scrollbar-thumb:hover, .sI
 .sProd1 .typePrice>div{
     margin: auto;
     background: white;
+    border-radius: 15px;
     display: block;
 }
 
@@ -690,6 +689,99 @@ body::-webkit-scrollbar-thumb:hover,.sIndex3::-webkit-scrollbar-thumb:hover, .sI
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+.sProd1 .popUp{
+    width: 100%;
+    height: 100%;
+    display: none;
+    position: fixed;
+    top:0;
+    left: 0;
+    z-index: 9999;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.sProd1 .popUp> div{
+    border-radius: 10px;
+    margin:auto;
+    background: white;
+    display: block;
+}
+
+.sProd1 .popUp .sec1{
+    padding: 10px 10px;
+    display: flex;
+    text-align: center;
+}
+
+.sProd1 .sec1 h3{
+    width: 100%;
+}
+
+.sProd1 .sec1 span{
+    padding-top: 3px
+}
+
+.sProd1 .sec2{
+    padding: 5px;
+    height: 500px;
+    overflow-y: auto;
+}
+
+.sProd1 .sec2>section>p{
+    margin: 5px 15px;
+    padding: 5px 0;
+    border-bottom: 1px solid lightgrey;
+}
+
+.sProd1 .sec2>section>p:hover{
+    background: lightgrey;
+}
+
+.sProd1 .sec2 aside{
+    display: none;
+}
+
+.sProd1 .sec2 div{
+    display: flex;
+    padding: 3px;
+    width: 350px;
+    border-radius: 7px;
+    margin: 10px;
+}
+
+.sProd1 .sec2 div:hover{
+    cursor: pointer;
+    background: lightgrey;
+}
+
+.sProd1 .sec2>div>img{
+    padding: 3px 3px 3px 5px;
+    width: var(--tam-sec2popUp);
+}
+
+.sProd1 .sec2>div>p{
+    padding: 5px 0 0 8px;
+    width: 100%;
+    text-align: left;
+}
+
+.sProd1 .sec2>div>span{
+    padding-top: 5px;
+}
+
+.sProd1 .sec2 aside div{
+    margin: 10px 20px;
+    padding: 6px;
+}
+
+.sProd1 .sec2 .typeAtr{
+    border-radius: 0;
+    border-bottom: 1px solid grey !important;
+}
+
+
+
 
 .sProd1 form div button{
     height: 30px;
